# cp04

./: README.md  manage.py  pyproject.toml  setug.cfg  setup.cfg
.github/workflows/: cheks.yml
antique/: admin.py  models.py  services.py  urls.py  views.py
antique/templates/antique/: antique_catalog.html  antique_page.html  author_catalog.html  base.html  contacts.html  index.html  success.html
antique/templates/antique/block/: footer.html  navbar.html
cp04/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
users/: forms.py  middleware.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: base.html  contacts.html  login.html  profile.html  registration.html  success.html
users/templates/users/block/: navbar.html
