[tool.poetry]
name = "cp04"
version = "0.1.0"
description = ""
authors = ["aleksandr obolonkov <itbolonkov2019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
python-dotenv = "^1.0.0"
pillow = "^9.5.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-bugbear = "^23.5.9"
pep8-naming = "^0.13.3"
mypy = "1.2.0"
django-stubs = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
